<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/pali_viet"
            android:title="@string/pali_viet"/>
        <item
            android:id="@+id/viet_pali"
            android:title="@string/viet_pali"/>
        <item
            android:id="@+id/favorite"
            android:title="@string/favorite"/>
        <item
            android:id="@+id/history"
            android:title="@string/history"/>
        <item
            android:id="@+id/feedback"
            android:title="@string/feedback"/>
        <item
            android:id="@+id/rating"
            android:title="@string/rating"/>
        <item
            android:id="@+id/sharing"
            android:title="@string/sharing"/>
        <item
            android:id="@+id/help"
            android:title="@string/help"/>

    </group>
</menu>